--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carpool_Buddy_Sam">
         <activity
+            android:name=".add_vehicle"
+            android:exported="false" />
+        <activity
+            android:name=".activity_create_user"
+            android:exported="false" />
+        <activity
             android:name=".VehicleInfo"
             android:exported="false" />
         <activity
             android:name=".UserProfile"
+            android:exported="false" />
+        <activity
+            android:name=".CreateUserActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
