Working on sending data to Vehicle Info

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carpool_Buddy_Sam">
         <activity
+            android:name=".specific_vehicle_info"
+            android:exported="false" />
+        <activity
             android:name=".vehiclesRecycler"
             android:exported="false" />
         <activity
